# doc/openapi.yml
@@ -87,6 +87,21 @@ paths:
                   $ref: "#/components/schemas/Citizen"
 
   /elections:
+    get:
+      operationId: getElections
+      tags:
+        - Election
+      description: Get all elections
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Election"
+
     post:
       operationId: createElections
       tags:
